syntax = "proto3";

package metald.v1;

option go_package = "github.com/unkeyed/unkey/go/gen/proto/metald/v1;metaldv1";

message StorageStats {
  int64 bytes_read = 1;
  int64 bytes_written = 2;
  int64 read_operations = 3;
  int64 write_operations = 4;
}

message StorageDevice {
  // Unique identifier for this storage device
  string id = 1;

  // Path to the backing file or block device
  string path = 2;

  // Whether this device is read-only
  bool read_only = 3;

  // Whether this is the root/boot device
  bool is_root_device = 4;

  // Storage interface type (virtio-blk, nvme, etc.)
  string interface_type = 5;

  // Additional storage options
  map<string, string> options = 6;
}
